<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.5">
  <DUT Name="StatusStruct" Id="{2a641705-ab07-42d5-9d4f-08c804024823}">
    <Declaration><![CDATA[{attribute 'pack_mode' := '0'} 
TYPE StatusStruct :
STRUCT
	Enable: BIT;
	Tripped : BIT;
	ShortCircuit : BIT;
	Overload : BIT;
	HWProtection : BIT;
	Overvoltage : BIT;
	Undervoltage : BIT;
	CurrentLevelWarning : BIT;
	
	CoolDownLock : BIT;
	DisabledBySwitch : BIT;
	DisabledByDI : BIT;
	DisabledByOutput : BIT;
	Diag : BIT;
	TcPDOState : BIT;
	InputCycleCount : BIT;
	InputCycleCount2 : BIT;
	
	StateDeviceSwitch : BIT;
	StateDigitalInput : BIT;
	Error : BIT;
	StateReset : BIT;
	StateSwitch : BIT;
	{attribute 'hide'}
	_hidden_bit_0: BIT;
	{attribute 'hide'}
	_hidden_bit_1: BIT;
	{attribute 'hide'}
	_hidden_bit_2: BIT;
	{attribute 'hide'}
	_hidden_byte_0: BYTE;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>