<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.5">
  <POU Name="FB_EL922x_ChannelExtended" Id="{9757487c-991c-4df2-9a74-8898cc78a011}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_EL922x_ChannelExtended IMPLEMENTS ITF_EL922x_ChannelExtended
VAR_INPUT
END_VAR
VAR_OUTPUT
END_VAR
VAR
	_Chn : EL922x_ChannelExtended;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[]]></ST>
    </Implementation>
    <Property Name="DisabledByDI" Id="{2150f53c-023b-4828-bdb2-98cb9d13e37e}">
      <Declaration><![CDATA[
PROPERTY DisabledByDI : BOOL
]]></Declaration>
      <Get Name="Get" Id="{d51d9500-f825-47d9-819d-b13e41232920}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[DisabledByDI := _Chn.Status.DisabledByDI;]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Property Name="DisabledByOutput" Id="{49f0e1d6-d31a-4a95-a0b1-f022ee3c0537}">
      <Declaration><![CDATA[
PROPERTY DisabledByOutput : BOOL
]]></Declaration>
      <Get Name="Get" Id="{beed161c-dbe7-4ef4-8576-41104c020510}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[DisabledByOutput := _Chn.Status.DisabledByOutput;]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Property Name="DisabledBySwitch" Id="{1a824d32-5cc9-491e-a5e2-e068b8d7adc3}">
      <Declaration><![CDATA[
PROPERTY DisabledBySwitch : BOOL
]]></Declaration>
      <Get Name="Get" Id="{d0922947-56fe-4875-a8b3-28f631092c80}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[DisabledBySwitch := _Chn.Status.DisabledBySwitch;]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Property Name="Overload" Id="{347322a6-d7e5-4ecc-bd2c-eae47d597746}">
      <Declaration><![CDATA[
PROPERTY Overload : BOOL
]]></Declaration>
      <Get Name="Get" Id="{0c479487-50e2-41b4-b043-ded7d4bd097a}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[Overload := _Chn.Status.Overload;]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Property Name="Overvoltage" Id="{e4a6bc9a-5932-44c2-bb0f-76e22b4abdd1}">
      <Declaration><![CDATA[
PROPERTY Overvoltage : BOOL
]]></Declaration>
      <Get Name="Get" Id="{8647ee9c-f952-46d5-8d97-330b212329ab}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[Overvoltage := _Chn.Status.Overvoltage;]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Property Name="ShortCircuit" Id="{c0944107-7473-421b-ba5d-e276cd557859}">
      <Declaration><![CDATA[
PROPERTY ShortCircuit : BOOL
]]></Declaration>
      <Get Name="Get" Id="{12dc32a6-c5aa-40a4-ae7b-8481020716f7}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[ShortCircuit := _Chn.Status.ShortCircuit;]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Property Name="StateDeviceSwitch" Id="{23d5908e-a535-40bd-8f0c-98f229a4c522}">
      <Declaration><![CDATA[
PROPERTY StateDeviceSwitch : BOOL
]]></Declaration>
      <Get Name="Get" Id="{3869f6c2-6d66-49ba-8989-52ed95fabc69}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[StateDeviceSwitch := _Chn.Status.StateDeviceSwitch;]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Property Name="StateDigitalInput" Id="{0b18c46a-920b-4768-949a-361670587027}">
      <Declaration><![CDATA[
PROPERTY StateDigitalInput : BOOL
]]></Declaration>
      <Get Name="Get" Id="{e37f2dd0-1b77-4e7e-a2bf-b0ad36f83bdc}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[StateDigitalInput := _Chn.Status.StateDigitalInput;]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Property Name="Undervoltage" Id="{c3be64b5-cefc-47cb-8b99-abcf7e0db533}">
      <Declaration><![CDATA[
PROPERTY Undervoltage : BOOL
]]></Declaration>
      <Get Name="Get" Id="{efbc00d4-c70c-4d5e-9575-7511dec31a39}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[Undervoltage := _Chn.Status.Undervoltage;]]></ST>
        </Implementation>
      </Get>
    </Property>
    <LineIds Name="FB_EL922x_ChannelExtended">
      <LineId Id="9" Count="0" />
    </LineIds>
    <LineIds Name="FB_EL922x_ChannelExtended.DisabledByDI.Get">
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="FB_EL922x_ChannelExtended.DisabledByOutput.Get">
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="FB_EL922x_ChannelExtended.DisabledBySwitch.Get">
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="FB_EL922x_ChannelExtended.Overload.Get">
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="FB_EL922x_ChannelExtended.Overvoltage.Get">
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="FB_EL922x_ChannelExtended.ShortCircuit.Get">
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="FB_EL922x_ChannelExtended.StateDeviceSwitch.Get">
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="FB_EL922x_ChannelExtended.StateDigitalInput.Get">
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="FB_EL922x_ChannelExtended.Undervoltage.Get">
      <LineId Id="2" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>