<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.5">
  <POU Name="FuseChannelExtended" Id="{9757487c-991c-4df2-9a74-8898cc78a011}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FuseChannelExtended EXTENDS FuseChannelBasic IMPLEMENTS IFuseChannelExtended
VAR_INPUT
END_VAR
VAR_OUTPUT
END_VAR
VAR
	_ChnEx : EL922x_ChannelExtended;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[]]></ST>
    </Implementation>
    <Property Name="DisabledByDI" Id="{2150f53c-023b-4828-bdb2-98cb9d13e37e}">
      <Declaration><![CDATA[
PROPERTY DisabledByDI : BOOL
]]></Declaration>
      <Get Name="Get" Id="{d51d9500-f825-47d9-819d-b13e41232920}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[DisabledByDI := _ChnEx.Status.DisabledByDI;]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Property Name="DisabledByOutput" Id="{49f0e1d6-d31a-4a95-a0b1-f022ee3c0537}">
      <Declaration><![CDATA[
PROPERTY DisabledByOutput : BOOL
]]></Declaration>
      <Get Name="Get" Id="{beed161c-dbe7-4ef4-8576-41104c020510}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[DisabledByOutput := _ChnEx.Status.DisabledByOutput;]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Property Name="DisabledBySwitch" Id="{1a824d32-5cc9-491e-a5e2-e068b8d7adc3}">
      <Declaration><![CDATA[
PROPERTY DisabledBySwitch : BOOL
]]></Declaration>
      <Get Name="Get" Id="{d0922947-56fe-4875-a8b3-28f631092c80}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[DisabledBySwitch := _ChnEx.Status.DisabledBySwitch;]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Property Name="Overload" Id="{347322a6-d7e5-4ecc-bd2c-eae47d597746}">
      <Declaration><![CDATA[
PROPERTY Overload : BOOL
]]></Declaration>
      <Get Name="Get" Id="{0c479487-50e2-41b4-b043-ded7d4bd097a}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[Overload := _ChnEx.Status.Overload;]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Property Name="Overvoltage" Id="{e4a6bc9a-5932-44c2-bb0f-76e22b4abdd1}">
      <Declaration><![CDATA[
PROPERTY Overvoltage : BOOL
]]></Declaration>
      <Get Name="Get" Id="{8647ee9c-f952-46d5-8d97-330b212329ab}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[Overvoltage := _ChnEx.Status.Overvoltage;]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Property Name="ShortCircuit" Id="{9ce84636-7137-4650-bbb7-ef74246b3894}">
      <Declaration><![CDATA[{warning 'add property implementation'}
PROPERTY ShortCircuit : BOOL
]]></Declaration>
      <Get Name="Get" Id="{e012670f-9951-4635-ac0d-f2a05774f78b}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[ShortCircuit := _ChnEx.Status.ShortCircuit;]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Property Name="StateDeviceSwitch" Id="{295930d7-b796-41d9-90dd-2bb675c52ebc}">
      <Declaration><![CDATA[{warning 'add property implementation'}
PROPERTY StateDeviceSwitch : BOOL
]]></Declaration>
      <Get Name="Get" Id="{e5986a7f-4804-491d-9696-f6f973680fb0}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[StateDeviceSwitch := _ChnEx.Status.StateDeviceSwitch;]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Property Name="StateDigitalInput" Id="{7180d8b0-db95-4cb6-98a7-266b9368556a}">
      <Declaration><![CDATA[{warning 'add property implementation'}
PROPERTY StateDigitalInput : BOOL
]]></Declaration>
      <Get Name="Get" Id="{7f2fdffc-4b5a-480e-9b45-27af82e8831a}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[StateDigitalInput := _ChnEx.Status.StateDigitalInput;]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Property Name="Undervoltage" Id="{0a5421cf-8f28-4525-8a8c-a201222b869b}">
      <Declaration><![CDATA[{warning 'add property implementation'}
PROPERTY Undervoltage : BOOL
]]></Declaration>
      <Get Name="Get" Id="{038e1e13-0cf5-44d3-ab0d-f736da527dc1}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[Undervoltage := _ChnEx.Status.Undervoltage;]]></ST>
        </Implementation>
      </Get>
    </Property>
    <LineIds Name="FuseChannelExtended">
      <LineId Id="9" Count="0" />
    </LineIds>
    <LineIds Name="FuseChannelExtended.DisabledByDI.Get">
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="FuseChannelExtended.DisabledByOutput.Get">
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="FuseChannelExtended.DisabledBySwitch.Get">
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="FuseChannelExtended.Overload.Get">
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="FuseChannelExtended.Overvoltage.Get">
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="FuseChannelExtended.ShortCircuit.Get">
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="FuseChannelExtended.StateDeviceSwitch.Get">
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="FuseChannelExtended.StateDigitalInput.Get">
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="FuseChannelExtended.Undervoltage.Get">
      <LineId Id="2" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>